--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -13,11 +13,11 @@ tasks:
 
   pod:
     cmds:
-      - cd Pod; podman-compose -p go_http_book up --detach
+      - cd Pod; podman-compose -p go_intermediate_book up --detach
 
   pod-rm:
     cmds:
-      - cd Pod; podman pod stop pod_go_http_book && podman pod rm pod_go_http_book
+      - cd Pod; podman pod stop pod_go_intermediate_book && podman pod rm pod_go_intermediate_book
 
   test:
     cmds:
