--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -16,6 +16,14 @@ tasks:
       - mysql -h 127.0.0.1 -u docker sampledb -p < createTable.sql
       - mysql -h 127.0.0.1 -u docker sampledb -p < insertData.sql
 
+  sqlfluff:
+    cmds:
+      - find . -name '*.sql' | xargs sqlfluff lint --dialect=mysql
+
+  sqlfluff_fix:
+    cmds:
+      - find . -name '*.sql' | xargs sqlfluff fix --dialect=mysql
+
   pod:
     cmds:
       - cd Pod; podman-compose -p go_intermediate_book up --detach
