--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,12 +1,16 @@
 version: '3'
 
+interval: 500ms
+
 tasks:
   hello:
     cmds:
       - echo 'Hello World from Task!'
     silent: true
 
-
+  build:
+    cmds:
+      - go build -o blog
   run:
     cmds:
       - go run main.go
